Compact labels for mobile screen, select tiers inclusively (A, A*, A+ and A-)

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,19 @@
 @import "tailwindcss";
+
+.on-desktop {
+  display: block;
+}
+
+.on-mobile {
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .on-desktop {
+    display: none;
+  }
+
+  .on-mobile {
+    display: block;
+  }
+}
